# WeatherServer

./: CMakeLists.txt  README.md  test.rb
include/: date.hpp  db_working.hpp  log.hpp  weather_forecast.hpp
logging/: log.cpp
server/: server.cpp  test
src/: db_working.cpp  weather_forecast.cpp
src/helpers/: date.cpp
